@@ -1,3 +1,4 @@
+12/20/11 workaround for #3190 (combo box popup causes control panel to resize)
 12/20/11 add "solute form" to model and control panel
 12/20/11 grab solute control from dilutions
 12/20/11 specify solutes as in design document
